--- a/tips.html
+++ b/tips.html
@@ -1,3 +1,5 @@
 <!-- Remember that fonts with spaces in the name must be wrapped in quotes for CSS.
 
+Borders can be used to group and prioritize content.
+
  -->
