--- a/tips.html
+++ b/tips.html
@@ -7,4 +7,11 @@ If you inspect your .label element with your browser's developer tools, you may 
 To solve this, reset the box model by creating a * selector and giving it a box-sizing property of border-box.
 
 
+Lines can help separate and group important content, especially when space is limited.
+
+Create a div element below your h1 element, and give it a class attribute set to divider.
+
+
+
+
  -->
