--- a/tips.html
+++ b/tips.html
@@ -14,4 +14,8 @@ Create a div element below your h1 element, and give it a class attribute set to
 
 
 
+The letter-spacing property can be used to adjust the space between each character of text in an element.
+
+
+
  -->
