--- a/tips.html
+++ b/tips.html
@@ -18,4 +18,11 @@ The letter-spacing property can be used to adjust the space between each charact
 
 
 
+ Horizontal spacing between equally important elements can increase the readability of your text.
+
+
+ The float property is used to place an element on the left or right of its container, allowing other content (such as text) to wrap around it.
+
+
+
  -->
