--- a/tips.html
+++ b/tips.html
@@ -25,4 +25,8 @@ The letter-spacing property can be used to adjust the space between each charact
 
 
 
+ The rem unit stands for root em, and is relative to the font size of the html element.
+
+
+
  -->
