--- a/tips.html
+++ b/tips.html
@@ -29,4 +29,8 @@ The letter-spacing property can be used to adjust the space between each charact
 
 
 
- -->
+-->
+
+
+
+<!-- The tips are copied from the freecodecamp tutorials. -->
