--- a/tips.html
+++ b/tips.html
@@ -33,4 +33,7 @@ The letter-spacing property can be used to adjust the space between each charact
 
 
 
-<!-- The tips are copied from the freecodecamp tutorials. -->
+<!-- The tips are copied from the freecodecamp tutorials.
+
+
+Most tips are from things I rarely know -->
