--- a/tips.html
+++ b/tips.html
@@ -36,4 +36,7 @@ The letter-spacing property can be used to adjust the space between each charact
 <!-- The tips are copied from the freecodecamp tutorials.
 
 
-Most tips are from things I rarely know -->
+Most tips are from things I rarely know
+
+
+Some parts of the tips may sound unnecessary because they are copied fron a series of lessons -->
