--- a/tips.html
+++ b/tips.html
@@ -29,7 +29,37 @@ The letter-spacing property can be used to adjust the space between each charact
 
 
 
--->
+The :not pseudo-selector can be used to select all elements that do not match the given CSS rule.
+
+div:not(#example) {
+  color: red;
+}
+The above selects all div elements without an id of example.-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
