--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p class="right bold no-divider">% Daily Value *</p>
         <div class="divider"></div>
         <p><span class="bold">Total Fat</span> 8g<span class="bold right">10%</span></p>
-        <p class="indent no-divider">Saturated Fat 1g <span class="bold right">5%</span><div class="divider"></div></p>
+        <p class="indent no-divider">Saturated Fat 1g <span class="bold right">5%</span><div class="divider"></div></p><p class="indent no-divider"><i>Trans</i> Fat 0g</p>
       </div>
     </div>
   </body>
