--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="divider"></div>
         <p><span class="bold">Total Fat</span> 8g<span class="bold right">10%</span></p>
         <p class="indent no-divider">Saturated Fat 1g <span class="bold right">5%</span><div class="divider"></div></p><p class="indent no-divider"><i>Trans</i> Fat 0g</p>
+        <div class="divider"></div>
       </div>
     </div>
   </body>
