--- a/tips.html
+++ b/tips.html
@@ -34,7 +34,11 @@ The :not pseudo-selector can be used to select all elements that do not match th
 div:not(#example) {
   color: red;
 }
-The above selects all div elements without an id of example.-->
+The above selects all div elements without an id of example.
+
+
+
+The advantage to creating these dividers is that you can apply specific classes to style them individually. Add dbl-indent to the class for your last .divider.-->
 
 
 
